# LucidGo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Makefile  README-CI.md  README.md
.github/workflows/: ci.yml  deploy.yaml  deploy.yml
articles/: blog-page-is-here.md  mini-katago-in-progress.md
backend/: .env.example  .flake8  .safety-project.ini  deploy.sh  mypy.ini  mypy_settings.py  pyproject.toml  render-build.sh  requirements-dev.txt  requirements.txt
backend/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_analysissession_id.py  0003_remove_game_black_player_remove_game_board_size_and_more.py  0004_alter_game_source.py
backend/auth/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/auth/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/katago/: apps.py  urls.py  views.py
backend/katago/configs/: analysis_example.cfg
backend/katago/data/samples/: 1.sgf  2.sgf  3.sgf
docs/: GitHub-Action.md  get-started.md  github-action.md  how-to-use.md  installation.md
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/docs/: get-started.mdx  how-to-use.mdx  installation.mdx
frontend/src/: App.jsx  App.tsx  api.js  api.ts  constants.js  constants.ts  index.css  main.jsx  main.tsx  utils.js  utils.ts  vite-env.d.ts
frontend/src/assets/sounds/: placeStoneSoundInstance.ts
frontend/src/assets/transcripts/: introduction.srt
frontend/src/components/: Board.jsx
frontend/src/components/analysis/: AnalysisConfigFields.tsx  ConfigFields.tsx
frontend/src/components/board/: AnalysisActionButtons.tsx  Board.jsx  CompareLegend.tsx  CompareSidebar.tsx  ComparisonReadyIndicator.tsx  Game.tsx  (+12 more)
frontend/src/contexts/: AuthContext.jsx  AuthContext.tsx
frontend/src/hooks/: useHover.js  useHover.ts  useNavigation.js  useNavigation.ts  usePageTitle.js  usePageTitle.ts  useRedirectIfAuthenticated.ts
frontend/src/pages/: Analyze.tsx  Blogs.jsx  Compare.tsx  Demo.jsx  Demo.tsx  Docs.jsx  Docs.tsx  Home.jsx  Home.tsx  NotFoundPage.jsx  NotFoundPage.tsx  Settings.tsx  VideoBlog.jsx
frontend/src/styles/: Board.module.css  Header.module.css  Home.module.css
frontend/src/types/: auth.ts  axios.d.ts  game.ts
frontend/src/utils/: analysisRequest.ts  board.ts  buildAnalysisRequest.ts  compareColors.ts  coordinates.ts  errorFormatting.ts
release-notes/: v1.0.0.md  v1.1.0.md  v1.2.0.md
scripts/: ci-local.sh
(+69 files in other folders)
