[project]
name = "lucidgo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.10.0",
  "asgiref==3.9.1",
  "bandit==1.8.6",
  "boolean-py==5.0",
  "cachecontrol==0.14.4",
  "certifi==2025.8.3",
  "cfgv==3.4.0",
  "charset-normalizer==3.4.4",
  "click==8.2.1",
  "coverage==7.6.7",
  "cyclonedx-python-lib==11.6.0",
  "defusedxml==0.7.1",
  "distlib==0.4.0",
  "dj-database-url==3.0.1",
  "django==5.2.12",
  "django-cors-headers==4.7.0",
  "django-environ==0.12.0",
  "django-stubs==5.2.7",
  "django-stubs-ext==5.2.7",
  "djangorestframework==3.16.0",
  "djangorestframework-simplejwt==5.5.1",
  "fastapi==0.123.10",
  "filelock==3.20.3",
  "gunicorn==23.0.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "identify==2.6.15",
  "idna==3.10",
  "iniconfig==2.3.0",
  "isort==7.0.0",
  "license-expression==30.4.4",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",
  "msgpack==1.1.2",
  "nodeenv==1.9.1",
  "packageurl-python==0.17.6",
  "packaging==25.0",
  "pip-api==0.0.34",
  "pip-audit==2.10.0",
  "pip-autoremove==0.10.0",
  "pip-requirements-parser==32.0.1",
  "platformdirs==4.3.8",
  "pluggy==1.6.0",
  "pre-commit==4.3.0",
  "psycopg2-binary==2.9.10",
  "py-serializable==2.1.0",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pygments==2.19.2",
  "pyjwt==2.12.0",
  "pyparsing==3.2.5",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "pytest-django==4.9.0",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "rfc3986==1.5.0",
  "rich==14.2.0",
  "ruff==0.14.8",
  "sgfmill==1.1.1",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "sqlparse==0.5.4",
  "starlette==0.49.1",
  "stevedore==5.5.0",
  "tomli==2.3.0",
  "tomli-w==1.2.0",
  "types-pyyaml==6.0.12.20250915",
  "typing-extensions==4.14.1",
  "typing-inspection==0.4.1",
  "urllib3==2.6.3",
  "uvicorn==0.35.0",
  "virtualenv==20.36.1",
  "whitenoise==6.9.0",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "__pycache__", ".venv"]
skips = ["B101", "B601"]

# [tool.coverage.run]
# source = "."
# omit = [
#   "*/migrations/*",
#   "*/venv/*",
#   "*/env/*",
#   "manage.py",
#   "*/settings.py",
#   "*/wsgi.py",
#   "*/asgi.py",
# ]

# [tool.coverage.report]
# exclude_lines = [
#   "pragma: no cover",
#   "def __repr__",
#   "if self.debug:",
#   "if settings.DEBUG",
#   "raise AssertionError",
#   "raise NotImplementedError",
#   "if 0:",
#   "if __name__ == .__main__.:",
#   "class .*\\bProtocol\\):",
#   "@(abc\\.)?abstractmethod",
# ]
